fix/landing-align

--- a/src/main/webapp/resources/sass/customize_screen/motor/_landing.scss
+++ b/src/main/webapp/resources/sass/customize_screen/motor/_landing.scss
@@ -65,6 +65,7 @@
             }
             .container.up h1{
                 line-height: 1;
+				margin-bottom: 0;
             }
             .container.down h3{
                 margin-bottom: 0;
