--- a/src/main/webapp/resources/sass/motor-styles.scss
+++ b/src/main/webapp/resources/sass/motor-styles.scss
@@ -34,7 +34,7 @@
 
 h1, h2, h3, h4, h5, h6, h7{
 font-family: 'CirculaPro-Bold', Arial, sans-serif !important;
-font-weight: 900;
+font-weight: 600;
 }
 h3{
 font-size: 24px;
@@ -90,7 +90,7 @@ font-size: 20px !important;
     margin-bottom: 0 !important;
     width: 100% !important;
     font-weight: bold !important;
-
+line-height: 1.3;
 }
 .underline{
 text-decoration: underline !important;
